<resources>
    <string name="app_name">1차과제</string>
    <string name="LOGIN">LOGIN</string>
    <string name="회원가입">회원가입</string>
    <string name="sopt">SOPT</string>
    <string name="이름">이름</string>
    <string name="아이디">아이디</string>
    <string name="비밀번호">비밀번호</string>
    <string name="signup">회원가입 완료</string>
    <string name="input_name">이름을 입력해주세요.</string>
    <string name="input_id">아이디를 입력해주세요.</string>
    <string name="input_pw">비밀번호를 입력해주세요.</string>
    <string name="image">이미지</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
</resources>