<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <Button
        android:id="@+id/buttonSuCom"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/signup"
        android:background="#8b00ff"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditPw"
        />
    <TextView
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/회원가입"
        android:textSize="50sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

    />

    <TextView
        android:id="@+id/SignName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/이름"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUp"
        />
    <TextView
        android:id="@+id/SignId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/아이디"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditName"
        />
    <TextView
        android:id="@+id/SignPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/비밀번호"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditId"
        />

    <EditText
        android:id="@+id/EditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name"
        android:layout_marginBottom="330dp"
        android:layout_marginStart="15dp"
        android:importantForAutofill="no"
        android:inputType="text"


        app:layout_constraintTop_toBottomOf="@id/SignName"


        tools:layout_editor_absoluteX="15dp" />
    <EditText
        android:id="@+id/EditId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/input_id"
        android:layout_marginBottom="170dp"
        android:importantForAutofill="no"
        android:inputType="text"


        app:layout_constraintTop_toBottomOf="@id/SignId"

        />
    <EditText
        android:id="@+id/EditPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/input_pw"

        android:importantForAutofill="no"
        android:inputType="textPassword"


        app:layout_constraintTop_toBottomOf="@id/SignPw"



        />
</androidx.constraintlayout.widget.ConstraintLayout>